# mystic-oracle

./: .gitignore  pyproject.toml
src/mystic-oracle/: __init__.py  core.py
